terraform/infra/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(var.tags, {
    Name = "Caprover-VPC"
  })

  lifecycle {
    prevent_destroy = true
  }
}
